# TraduzAi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TEST_CJK_REAL_NEEDED.txt  TRADUZAI_PRODUTO_SITE_V14_STATUS.md  backup_1c09d460ebe2ebf77f67b6f9f0d74003b7773a6d.py  backup_1cee2b55a6c55e29c8d28e9c53613c0d0d7d6460.py  backup_3272e4423368f688ce2b31c91cf534456075af4c.py  backup_3869bba046f32017f2ea6b8014f0135750a0eaa2.py  backup_3a487d131c35ebc9f1055ed786ffc508d0782e7f.py  backup_489152dd3473d3a846525d3d5efe3695929b62b4.py  backup_5a757822a68c1f3fc074f01c14590bb4800483f8.py  backup_7d5dfc643f2d5596d1b46e8c9af5e1adc7f4d9cf.py  backup_8b6a4e0101b55ba665107f2d3f3d78f83d5c8681.py  backup_a5dbab81374b0620582111d7bcd9e646dce1ce9f.py  backup_d747d8b15905dfae1ea938d7fa2a4a87a7fea144.py  backup_fb311e9c3c69f84ef1ced05fcf4be396d6d6b17c.py  backup_fc5731cf17a168ad8daf8e08c3148dc660fbeb77.py  context.archive.md  context.md  debug_pipeline_test_config.json  debug_user_fallbacks.py  index.html  mangatl-project-definitive.md  out.txt  package-lock.json  package.json  plano_refactor_editor_traduzai_revisado.md  plano_senior_editor_brush_mascara_contexto_obra_v15_6.md  playwright.config.ts  prompt_refactor_profissional_editor_traduzai.md  pyrightconfig.json  requirements-server.txt  requirements-worker.txt  run_full_debug.py  setup-windows.ps1  tailwind.config.js  test_cjk_config.json  (+6 more)
data/: credits.json
debug/: phase_00_repo_inventory.md  phase_00_report.md  phase_01_report.md  phase_02_report.md  phase_03_report.md  phase_04_report.md  phase_05_report.md  phase_06_report.md  phase_07_report.md  phase_08_report.md  phase_09_report.md  phase_10_report.md  phase_11_report.md  phase_12_report.md  phase_13_report.md  phase_14_report.md  phase_15_report.md  phase_16_report.md  phase_17_report.md  phase_18_report.md  phase_19_report.md  phase_20_report.md  phase_21_report.md  phase_product_00.md  phase_product_01.md  phase_product_02.md  phase_product_03.md  phase_product_04.md  phase_product_05.md  phase_product_06.md  phase_product_07.md  phase_product_08.md  phase_product_09.md  phase_product_10.md  phase_product_11.md  phase_product_12.md  phase_product_13.md  phase_product_14.md  phase_product_15.md  phase_product_16.md  (+7 more)
debug_pipeline_test_cjk/: project.json
debug_pipeline_test_cjk_ko/: project.json
debug_pipeline_test_cjk_zh/: project.json
docs/: architecture.md  context-and-glossary.md  context-resolver.md  export.md  glossary.md  legal.md  pipeline.md  project-schema.md  qa-system.md  release.md  troubleshooting.md  user-guide.md  vast-serverless.md  vast-worker.md
e2e/: editor-rebuild.spec.ts
fixtures/: ocr_noise_cases.json  qa_cases.json  translation_cases.json
fonts/: font-map.json
inpaint_debug_pipeline_temp/: config.json  project.json
lab/: __init__.py  benchmarking.py  planner.py  reference_ingestor.py  runner.py
models/: manifest.json
pipeline/: __init__.py  build_parallel_corpus.py  config_debug.json  create_test_cbz.py  debug_output.txt  debug_visual_artifact.py  download_models.py  editor_vision_cache.py  fast_page_server.py  main.py  project_writer.py  recovery.py  requirements.txt  result_ko_as_en.txt  runtime_profiles.py  sitecustomize.py  structured_logger.py  venv_freeze_before_paddle_gpu_20260520_152627.txt
release/: v0.2.0-beta.md
scripts/: audit-cleanup.ps1  backup_project.py  bench_editor_vision_preload.py  run-tauri.mjs  run-vite.mjs  tauri-dev-preflight.mjs
server/: __init__.py  __main__.py  admin_api.py  app.py  audit.py  auth.py  auth_api.py  config.py  db.py  deps.py  models.py  orgs.py  queue.py  storage.py  usage.py
site/: README.md  index.html  package-lock.json  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/renderer-bridge/: Cargo.toml
src-tauri/renderer-bridge/src/: lib.rs  main.rs
src-tauri/renderer-bridge/tests/: bubble_mask.rs  render_contract.rs
src-tauri/src/: glossary.rs  internet_context.rs  lib.rs  local_memory.rs  main.rs  storage.rs  work_context.rs
src-tauri/src/commands/: credits.rs  glossary.rs  lab.rs  local_memory.rs  mod.rs  pipeline.rs  project.rs  project_schema.rs  settings.rs  storage.rs  studio_lite.rs  work_context.rs
src-tauri/src/export/: mod.rs
src-tauri/src/export/psd/: descriptor.rs  engine_data.rs  mod.rs  packbits.rs  writer.rs
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/src/: chapter_import.rs  library.rs  main.rs  work_tracking.rs
studio/src-tauri/src/fixtures/: anilist_media.json  mangadex_feed.json
vision-worker/: Cargo.toml
vision-worker/src/: main.rs
(+4788 files in other folders)
