[package]
name = "traduzai"
version = "0.1.0"
description = "TraduzAi — Tradutor desktop de mangá por IA"
authors = ["TraduzAi"]
edition = "2021"

[lib]
name = "traduzai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
walkdir = "2"
once_cell = "1"
regex = "1"
html-escape = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
