[package]
name = "traduzai-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
koharu-core = { path = "..\\..\\koharu\\koharu-core" }
koharu-llm = { path = "..\\..\\koharu\\koharu-llm" }
koharu-ml = { path = "..\\..\\koharu\\koharu-ml", features = ["cuda"] }
koharu-runtime = { path = "..\\..\\koharu\\koharu-runtime" }

[patch.crates-io]
candle-transformers = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
candle-core = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
candle-nn = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
ug = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }
ug-cuda = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }
