[package]
name = "traduzai-renderer-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "traduzai_renderer_bridge"
path = "src/lib.rs"

[[bin]]
name = "renderer-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
fontdb = "0.23"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skrifa = "0.42"
tiny-skia = "0.12"

[dev-dependencies]
tempfile = "3"
